--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 #survey-form {
   max-width: 900px;
   margin: 0 auto;
-  background-color: black;
+  background-color: greenyellow;
   color: aliceblue;
 }
 .row {
